jacaco plugin added for junit coverage report

--- a/AddressBookDemo/pom.xml
+++ b/AddressBookDemo/pom.xml
@@ -108,6 +108,35 @@
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
 
+			<plugin>
+				<groupId>org.jacoco</groupId>
+				<artifactId>jacoco-maven-plugin</artifactId>
+				<version>0.8.2</version>
+				<configuration>
+					<excludes>
+						<exclude>com/reece/demo/model/*.*</exclude>
+						<exclude>com/reece/demo/exception/*.*</exclude>
+						<exclude>com/reece/demo/service/*.*</exclude>
+					</excludes>
+				</configuration>
+				<executions>
+					<execution>
+						<goals>
+							<goal>prepare-agent</goal>
+						</goals>
+					</execution>
+					<!-- attached to Maven test phase -->
+					<execution>
+						<id>report</id>
+						<phase>test</phase>
+						<goals>
+							<goal>report</goal>
+						</goals>
+					</execution>
+				</executions>
+
+			</plugin>
+
 		</plugins>
 	</build>
 
